crates/biome_cli/tests/snapshots/main_commands_rage/rage_with_invalid_config_path.snap
---
source: crates/biome_cli/tests/commands/rage.rs
expression: content
---
# Emitted Messages

```block
CLI:
  Version:                      0.0.0
  Color support:                **PLACEHOLDER**

Platform:
  CPU Architecture:             **PLACEHOLDER**
  OS:                           **PLACEHOLDER**

Environment:
  BIOME_LOG_PATH:               **PLACEHOLDER**
  BIOME_LOG_PREFIX_NAME:        unset
  BIOME_CONFIG_PATH:            env-config.json
  BIOME_THREADS:                unset
  NO_COLOR:                     **PLACEHOLDER**
  TERM:                         **PLACEHOLDER**
  JS_RUNTIME_VERSION:           unset
  JS_RUNTIME_NAME:              unset
  NODE_PACKAGE_MANAGER:         unset

Biome Configuration:
  Status:                       Failed to load
  Error:                        Biome couldn't find a configuration in the directory does_not_exist.json.

Server:
  Version:                      0.0.0
  Name:                         biome_lsp
  CPU Architecture:             **PLACEHOLDER**
  OS:                           **PLACEHOLDER**

Workspace:
  Open Documents:               0
```
