crates/biome_cli/tests/snapshots/main_commands_rage/with_configuration.snap
---
source: crates/biome_cli/tests/commands/rage.rs
expression: content
---
## Command

```shell
biome rage
```

## `biome.json`

```json
{
  "formatter": {
    "enabled": false
  }
}
```

# Emitted Messages

```block
CLI:
  Version:                      0.0.0
  Color support:                **PLACEHOLDER**

Platform:
  CPU Architecture:             **PLACEHOLDER**
  OS:                           **PLACEHOLDER**

Environment:
  BIOME_DISTRIBUTION:                unset
  BIOME_LOG_FILE:                    unset
  BIOME_LOG_PATH:                    **PLACEHOLDER**
  BIOME_LOG_PREFIX_NAME:             unset
  BIOME_LOG_LEVEL:                   unset
  BIOME_LOG_KIND:                    unset
  BIOME_CONFIG_PATH:                 unset
  BIOME_THREADS:                     unset
  BIOME_WATCHER_KIND:                unset
  BIOME_WATCHER_POLLING_INTERVAL:    unset
  BIOME_BINARY:                      unset
  RUST_BACKTRACE:                    **PLACEHOLDER**
  NO_COLOR:                     **PLACEHOLDER**
  TERM:                         **PLACEHOLDER**
  JS_RUNTIME_VERSION:           unset
  JS_RUNTIME_NAME:              unset
  NODE_PACKAGE_MANAGER:         unset

Biome Configuration:
  Status:                       Loaded successfully.
  Path:                         biome.json
  Formatter enabled:            false
  Linter enabled:               true
  Assist enabled:               true
  VCS enabled:                  false
  HTML full support enabled:    unset

Files:
  Ignore Unknown:               unset
  Includes:                     unset

Server:
  Version:                      0.0.0
  Name:                         biome_lsp
  CPU Architecture:             **PLACEHOLDER**
  OS:                           **PLACEHOLDER**

Workspace:
  Open Documents:               0
```
